internal/controller/testdata/captenant/cat-with-session-affinity-dr-vs-logout-endpoint.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    sme.sap.com/resource-hash: a82ea6f2c4d1d9d3dc579c3810d57bba19ea8b478ec05f1381e5e9c6e237f5b8
    sme.sap.com/owner-identifier: default.test-cap-01-provider
  labels:
    sme.sap.com/owner-generation: "0"
    sme.sap.com/owner-identifier-hash: db1f1fd7eaeb0e6407c741b7e4b2540044bcc4ec
    sme.sap.com/tenant-type: provider
  name: test-cap-01-provider
  namespace: default
  ownerReferences:
    - apiVersion: sme.sap.com/v1alpha2
      blockOwnerDeletion: true
      controller: true
      kind: CAPTenant
      name: test-cap-01-provider
spec:
  gateways:
    - test-cap-01-primary-gen
    - default/test-cap-01-secondary-gen
  hosts:
    - my-provider.app-domain.test.local
    - my-provider.foo.bar.local
  http:
  - headers:
      response:
        set:
          Set-Cookie: CAPOP_CAV=test-cap-01-cav-v1;Path=/;HttpOnly;Secure;Max-Age=0
    match:
    - headers:
        Cookie:
          regex: (^|.*; )CAPOP_CAV=test-cap-01-cav-v1($|; .*)
      uri:
        regex: ^|.*(signOff).*
    route:
    - destination:
        host: test-cap-01-cav-v1-app-router-svc.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
  - match:
    - headers:
        Cookie:
          regex: (^|.*; )CAPOP_CAV=test-cap-01-cav-v1($|; .*)
    route:
    - destination:
        host: test-cap-01-cav-v1-app-router-svc.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
  - headers:
      response:
        add:
          Set-Cookie: CAPOP_CAV=test-cap-01-cav-v1;Path=/;HttpOnly;Secure
    route:
    - destination:
        host: test-cap-01-cav-v1-app-router-svc.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
